This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX). To open the tracker item, go to URL:
http://winmerge.org/tracker/[tracker-id]

WinMerge 2.13.7
  Add more C/C++ types to syntax highlight (#2776705)
  Improve startup time (#2788142)
  Bugfix: Crash if tabs or EOLs in command line (#2726995)
  Bugfix: Reports had same left/right descriptions (#2772646)
  Bugfix: Diff view highlighted last char diff incorrectly (#2785186)
  Bugfix: Could select prediffer when plugins were disabled (#2787131)
  Bugfix: File compare HTML reports use invald DOCTYPE (#2783477)
  Bugfix: "##" in file filter pattern caused an infinite loop (#2789345)
  Bugfix: File wm_*.* in temporary folder caused an infinite loop (#2789348)

WinMerge 2.13.6 - 2009-04-16 (r6665)
  Show deleted differences in difference highlight with own
    color (#2669526)
  Disable folder compare tree-view by default (#2714968)
  Allow setting codepage from command line (#2725549)
  Improve detecting XML files in file compare (#2726531)
  Installer: Don't install heksedit (r6659)
  Bugfix: Says files are identical after making files different in another
    application and re-loading them (#2672737)
  Bugfix: Difference pane didn't show added lines (#2710146)
  Bugfix: Did not show difference at end of line (#2638045)
  Bugfix: Files with missing last EOL weren't merged correctly (#2712120)
  Bugfix: When conflict file saved trailing line-ending was lost (#2550412)
  Translation updates:
  - Czech (r6581)
  - Polish (#2717382, #2720875)

WinMerge 2.13.5 - 2009-03-19 (r6579)
  Remember last target folder for Copy/Move to in folder compare (#2659228)
  Add shortcut for Discard All in save confirmation dialog (#2559560)
  Initialize folder selection dialog to currently selected folder in
    options dialog (r6570)
  Expand/collapse folders from keyboard (#2203904)