@@ -37,8 +37,11 @@ const TCHAR ContributorsPath[] = _T("\\contributors.txt");
 /** @brief Release notes in HTML format. */
 const TCHAR RelNotes[] = _T("\\Docs\\ReleaseNotes.html");
 
-/** @brief GLP Licence local file name. */
+/** @brief GPL Licence local file name. */
 const TCHAR LicenseFile[] = _T("\\Copying");
+
+/** @brief WinMerge folder in My Folders-folder. */
+const TCHAR WinMergeDocumentsFolder[] = _T("WinMerge");
 
 /**
  * @brief Default relative path to "My Documents" for private filters.
