@@ -6,6 +6,7 @@ http://winmerge.org/tracker/[tracker-id]
 WinMerge 2.13.7
   Add more C/C++ types to syntax highlight (#2776705)
   Improve startup time (#2788142)
+  Create config log file to My Documents-folder (#2789839)
   Bugfix: Crash if tabs or EOLs in command line (#2726995)
   Bugfix: Reports had same left/right descriptions (#2772646)
   Bugfix: Diff view highlighted last char diff incorrectly (#2785186)
